--- a/Changelog
+++ b/Changelog
@@ -7,6 +7,7 @@ version <next>:
 - dedot filter
 - chromashift and rgbashift filters
 - freezedetect filter
+- truehd_core bitstream filter
 
 
 version 4.1:
