--- a/doc/filters.texi
+++ b/doc/filters.texi
@@ -1231,14 +1231,14 @@ Set video stream size. This option is used only when @var{response} is enabled.
 Set video stream frame rate. This option is used only when @var{response} is enabled.
 
 @item minp
-Set minimal partition size used for convolution. Default is @var{16}.
+Set minimal partition size used for convolution. Default is @var{8192}.
 Allowed range is from @var{16} to @var{32768}.
 Lower values decreases latency at cost of higher CPU usage.
 
 @item maxp
 Set maximal partition size used for convolution. Default is @var{8192}.
 Allowed range is from @var{16} to @var{32768}.
-Lower values decreases latency at cost of higher CPU usage.
+Lower values may increase CPU usage.
 @end table
 
 @subsection Examples
